--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
     implementation group: 'org.apache.tika', name: 'tika-core', version: '2.5.0'
+    implementation 'org.apache.poi:poi:5.2.3'         // .xls
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'   // .xlsx
     runtimeOnly 'com.mysql:mysql-connector-j'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
